--- a/gui/package.json
+++ b/gui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fontsource/poppins": "^4.5.8",
+    "@react-three/fiber": "^8.9.1",
     "@tauri-apps/api": "^1.0.2",
     "@vitejs/plugin-react": "^2.2.0",
     "browserslist": "^4.18.1",
@@ -21,7 +22,6 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
-    "quaternion": "^1.4.0",
     "react": "^18.0.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^18.0.0",
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.2.2",
     "semver": "^7.3.5",
     "solarxr-protocol": "file:../solarxr-protocol",
+    "three": "^0.146.0",
     "typescript": "^4.6.3"
   },
   "scripts": {
@@ -66,6 +67,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.5",
     "@types/react-modal": "3.13.1",
+    "@types/three": "^0.146.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "autoprefixer": "^10.4.4",
